--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.514.0",
+    "mammoth": "^1.9.1",
     "motion": "^12.17.3",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^2.16.105",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
