Made ratings, and carousel for guide

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.13.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
