--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
@@ -32,7 +33,9 @@
     "mammoth": "^1.9.1",
     "motion": "^12.17.3",
     "next-themes": "^0.4.6",
+    "pako": "^2.1.0",
     "pdfjs-dist": "^2.16.105",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/pako": "^2.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-katex": "^3.0.4",
