--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,73 +1,76 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/genai": "^1.6.0",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/vite": "^4.1.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.6.0",
-    "gh-pages": "^6.3.0",
-    "gsap": "^3.13.0",
-    "jszip": "^3.10.1",
-    "katex": "^0.16.22",
-    "lucide-react": "^0.514.0",
-    "mammoth": "^1.9.1",
-    "motion": "^12.17.3",
-    "next-themes": "^0.4.6",
-    "pako": "^2.1.0",
-    "pdfjs-dist": "^2.16.105",
-    "qrcode.react": "^4.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0",
-    "react-katex": "^3.1.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.6.2",
-    "react-syntax-highlighter": "^15.6.1",
-    "rehype-katex": "^7.0.1",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/pako": "^2.0.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@types/react-katex": "^3.0.4",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+    "name": "frontend",
+    "homepage": "https://theresatree.github.io/Flashcards-Generator",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "dependencies": {
+        "@google/genai": "^1.6.0",
+        "@radix-ui/react-alert-dialog": "^1.1.14",
+        "@radix-ui/react-collapsible": "^1.1.11",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-progress": "^1.1.7",
+        "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.7",
+        "@tailwindcss/vite": "^4.1.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.6.0",
+        "gh-pages": "^6.3.0",
+        "gsap": "^3.13.0",
+        "jszip": "^3.10.1",
+        "katex": "^0.16.22",
+        "lucide-react": "^0.514.0",
+        "mammoth": "^1.9.1",
+        "motion": "^12.17.3",
+        "next-themes": "^0.4.6",
+        "pako": "^2.1.0",
+        "pdfjs-dist": "^2.16.105",
+        "qrcode.react": "^4.2.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-dropzone": "^14.3.8",
+        "react-icons": "^5.5.0",
+        "react-katex": "^3.1.0",
+        "react-markdown": "^10.1.0",
+        "react-router-dom": "^7.6.2",
+        "react-syntax-highlighter": "^15.6.1",
+        "rehype-katex": "^7.0.1",
+        "remark-gfm": "^4.0.1",
+        "remark-math": "^6.0.0",
+        "sonner": "^2.0.5",
+        "tailwind-merge": "^3.3.1",
+        "vaul": "^1.1.2"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.0",
+        "@types/pako": "^2.0.3",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@types/react-katex": "^3.0.4",
+        "@vitejs/plugin-react-swc": "^3.9.0",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^16.0.0",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^4.1.8",
+        "tw-animate-css": "^1.3.4",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
+        "vite": "^6.3.5"
+    }
 }
